# ckanext-laissezpasser

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/laissezpasser/: cli.py  helpers.py  laissezpasser.py  plugin.py  views.py
ckanext/laissezpasser/assets/: script.js  webassets.yml
ckanext/laissezpasser/logic/: action.py  auth.py  authpass.py  schema.py  validators.py
ckanext/laissezpasser/migration/laissezpasser/: alembic.ini
ckanext/laissezpasser/migration/laissezpasser/versions/: fe8daef351db_temporary_access_passes.py
ckanext/laissezpasser/models/: laissezpasser_passes_table.py
ckanext/laissezpasser/templates/ckanext_laissezpasser/: package_passes.html  package_passes_new.html  passes.html
ckanext/laissezpasser/templates/ckanext_laissezpasser/snippets/: list_passes.html  valid_pass_toggle.html
ckanext/laissezpasser/templates/laissezpasser/: package_passes_new.html  passes.html
ckanext/laissezpasser/templates/package/: edit_base.html  read.html
ckanext/laissezpasser/templates/package/snippets/: laissezpasser.html
ckanext/laissezpasser/templates/user/: read_base.html
ckanext/laissezpasser/tests/: test_helpers.py  test_laissezpasser.py  test_plugin.py  test_views.py
ckanext/laissezpasser/tests/logic/: test_action.py  test_auth.py  test_validators.py
