[metadata]
name = ckanext-laissezpasser
version = 0.0.1
description = Provide temporary access to resources for a user
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BioplatformsAustralia/ckanext-laissezpasser
author = Bioplatforms Australia
author_email = help@bioplatforms.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN authorization temporary access

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             laissezpasser = ckanext.laissezpasser.plugin:LaissezpasserPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/laissezpasser/i18n/ckanext-laissezpasser.pot
width = 80

[init_catalog]
domain = ckanext-laissezpasser
input_file = ckanext/laissezpasser/i18n/ckanext-laissezpasser.pot
output_dir = ckanext/laissezpasser/i18n

[update_catalog]
domain = ckanext-laissezpasser
input_file = ckanext/laissezpasser/i18n/ckanext-laissezpasser.pot
output_dir = ckanext/laissezpasser/i18n
previous = true

[compile_catalog]
domain = ckanext-laissezpasser
directory = ckanext/laissezpasser/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
